apps/nextcloud/migrate-data.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tmp
  namespace: cloud
spec:
  containers:
    - name: tmp
      image: instrumentisto/rsync-ssh
      command: ["sh", "-c", "sleep 3600"]
      volumeMounts:
        - mountPath: "/nextcloud-data"
          name: nextcloud-data
        - mountPath: "/nextcloud-config"
          name: nextcloud-config
  volumes:
    - name: nextcloud-data
      persistentVolumeClaim:
        claimName: nextcloud-data
    - name: nextcloud-config
      persistentVolumeClaim:
        claimName: nextcloud-config
