apps/nextcloud/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: cloud
spec:
  selector:
    app: nextcloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: cloud
spec:
  selector:
    app: nextcloud
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nextcloud-app
              mountPath: /var/www/html
            - name: nextcloud-data
              mountPath: /mnt/ncdata
              subPath: data
            - name: nextcloud-config
              mountPath: /var/www/html/config
              subPath: config
        - name: redis
          image: redis:alpine
          command: ["redis-server", "--requirepass", "$(REDIS_PASSWORD)"]
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: nextcloud-app
          persistentVolumeClaim:
            claimName: nextcloud-app
        - name: nextcloud-config
          persistentVolumeClaim:
            claimName: nextcloud-config
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
        - name: redis-data
          emptyDir: {}
